# gtsam-nb

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.BSD  README.md  justfile  pyproject.toml  vcpkg.json  vcpkg.sh
.github/: release-please-config.json
.github/workflows/: on_main.yml  on_pr.yml  reusable_build.yml  reusable_checks.yml
cpp/: base.cpp  basis.cpp  custom.cpp  discrete.cpp  geometry.cpp  hybrid.cpp  inference.cpp  linear.cpp  main.cpp  navigation.cpp  nonlinear.cpp  sam.cpp  sfm.cpp  slam.cpp  symbolic.cpp
cpp/preamble/: base.h  geometry.h  slam.h
cpp/utils/: boost_optional.h  boost_shared_ptr.h  preamble.h  specializations.h
python/gtsam/: __init__.py  gtsfm.py  imuBias.py  noiseModel.py  symbol_shorthand.py
python/gtsam/utils/: __init__.py  logging_optimizer.py  plot.py  test_case.py  visual_data_generator.py  visual_isam.py
tests/: README.md  testEssentialMatrixConstraint.py  testScenarioRunner.py  test_Cal3Fisheye.py  test_Cal3Unified.py  test_DSFMap.py  test_DecisionTreeFactor.py  test_DiscreteBayesNet.py  test_DiscreteBayesTree.py  test_DiscreteConditional.py  test_DiscreteDistribution.py  test_DiscreteFactorGraph.py  test_DsfTrackGenerator.py  test_Factors.py  test_GaussianBayesNet.py  test_GaussianFactorGraph.py  test_GraphvizFormatting.py  test_HybridBayesNet.py  test_HybridFactorGraph.py  test_HybridNonlinearFactorGraph.py  test_HybridValues.py  test_JacobianFactor.py  test_KalmanFilter.py  test_KarcherMeanFactor.py  test_LocalizationExample.py  test_NonlinearOptimizer.py  test_OdometryExample.py  test_PinholeCamera.py  test_PlanarSLAMExample.py  test_Point2.py  test_Point3.py  test_Pose2.py  test_Pose2SLAMExample.py  test_Pose3.py  test_Pose3SLAMExample.py  test_PriorFactor.py  test_Rot3.py  test_SFMExample.py  test_Scenario.py  test_SfmData.py  (+19 more)
