[project]
name = "gtsam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Easton Potokar", email = "contagon6@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["numpy>2"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "cpp/**/*.{h,c,hpp,cpp}" },
    { file = "CMakeLists.txt" },
]

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.9.2", "numpy"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = ["compdb>=0.2.0"]

[tool.basedpyright]
include = ["python"]
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = "none"
