[project]
name = "gtsam"
version = "0.0.1"
description = "nanobind bindings for GTSAM"
authors = [
    { name = "Easton Potokar", email = "contagon6@gmail.com" },
    { name = "GTSAM Authors" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>2"]
keywords = ["gtsam", "bindings", "nanobind", "robotics", "slam", "optimization"]
license = { file = "LICENSE.BSD" }

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "cpp/**/*.{h,c,hpp,cpp}" },
    { file = "CMakeLists.txt" },
]

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.9.2", "numpy"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = ["compdb>=0.2.0"]

[tool.basedpyright]
include = ["python"]
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = "none"
reportWildcardImportFromLibrary = "none"

[tool.cibuildwheel]
skip = [
    "cp3??t-*",           # skip free-threaded builds 
    "*musllinux*",        # skip musl builds 
    "*win32",             # skip 32-bit windows
    "*macosx_x86_64",     # skip intel mac builds
    "*macosx_universal2", # skip universal2 mac builds
]
# test-requires = "pytest>=8.3.5 scipy>=1.15.2"
# test-command = "evalio ls pipelines && pytest {project}/tests"
build-verbosity = 1
